--- a/Forecasting_House_Prices_using_Smart_Regression_Techniques.ipynb
+++ b/Forecasting_House_Prices_using_Smart_Regression_Techniques.ipynb
@@ -423,7 +423,7 @@
         }
       ],
       "source": [
-        "url = 'https://github.com/Thomas09022006/House_Price/blob/main/TOM1.csv'\n",
+        "url = 'https://raw.githubusercontent.com/Thomas09022006/House_Price/main/TOM1.csv'\n",
         "df = pd.read_csv(url)\n",
         "df.head()\n"
       ]
